--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="data:," />
   <link rel="shortcut icon" href="data:," />
-    <title>DrukFarm</title>
+    <title>FabLab Manager</title>
   </head>
   <body>
     <div id="root"></div>
